fix avatar stretching on housemate view

--- a/src/screens/Housemates/Housemate/index.scss
+++ b/src/screens/Housemates/Housemate/index.scss
@@ -11,6 +11,11 @@
     //border-radius: 5px;
     box-shadow: 0px 0px 4px 1px rgba(0,0,0,0.2);
     margin:20px;
+    .avatar_img{
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
+    }
     cursor: pointer;
     .info {
       display: flex;
